Fixes dark mode bugs, updates plus/minus icons, replacing the svg for react component to enable dynamic change for dark mode

--- a/src/app/(pages)/cart/CartItem/index.module.scss
+++ b/src/app/(pages)/cart/CartItem/index.module.scss
@@ -62,10 +62,21 @@
 .quantityBtn {
   display: flex;
   justify-content: center;
+  align-items: center;
   width: 100%;
   height: 100%;
   cursor: pointer;
 }
+
+
+:global([data-theme="dark"]) {
+  .qtnBt {
+    path {
+      fill: white;
+    }
+  }
+}
+
 
 .quantityInput {
   text-align: center;
