--- a/src/app/(pages)/cart/CartPage/index.module.scss
+++ b/src/app/(pages)/cart/CartPage/index.module.scss
@@ -36,6 +36,7 @@
 
 .itemsList {
   border-top: 1px solid var(--color-dark-50);
+  padding-left: 0;
 }
 
 .summary {
