--- a/src/app/_components/Card/index.module.scss
+++ b/src/app/_components/Card/index.module.scss
@@ -12,7 +12,6 @@
   display: flex;
   flex-direction: column;
   gap: 4px;
-  background-color: white;
   width: 100%;
 
   @include small-break {
@@ -78,6 +77,7 @@
 }
 
 .image {
+  background-color: var(--theme-elevation-50);
   padding: 24px;
   object-fit: contain;
   aspect-ratio: 1/1;
